--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ background: #E9E1DF;
 }
 
 .name-and-info-section {
-  width: 100%;
+/*   width: 100%; */
   height: 47px;
   display: grid;
   align-items: center;
